k3s/manifests/healthygames/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthygames
  namespace: healthygames
spec:
  type: ClusterIP
  selector:
    app: healthygames
  ports:
    - name: http
      port: 80
      targetPort: 8080
